--- a/src/data_summary/DSWindow.form
+++ b/src/data_summary/DSWindow.form
@@ -26,6 +26,7 @@
     </Menu>
   </NonVisualComponents>
   <Properties>
+    <Property name="title" type="java.lang.String" resourceKey="Form.title"/>
     <Property name="name" type="java.lang.String" value="" noResource="true"/>
   </Properties>
   <SyntheticProperties>
