--- a/src/file_list/FileListWindow.form
+++ b/src/file_list/FileListWindow.form
@@ -44,7 +44,7 @@
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="resetTable">
               <Properties>
-                <Property name="text" type="java.lang.String" value="ResetTable"/>
+                <Property name="text" type="java.lang.String" value="Reset Table"/>
                 <Property name="name" type="java.lang.String" value="resetTable" noResource="true"/>
               </Properties>
               <Events>
@@ -123,6 +123,9 @@
     <SyntheticProperty name="menuBar" type="java.lang.String" value="jMenuBar1"/>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
   </SyntheticProperties>
+  <Events>
+    <EventHandler event="windowClosing" listener="java.awt.event.WindowListener" parameters="java.awt.event.WindowEvent" handler="formWindowClosing"/>
+  </Events>
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
     <AuxValue name="FormSettings_autoSetComponentName" type="java.lang.Boolean" value="true"/>
